extra/ocp-follower-cert/follower-ocp-certbased.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: conjur-follower
  labels:
    app: conjur-follower
spec:
  ports:
  - port: 443
    name: https
  selector:
    app: conjur-follower
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: conjur-follower
  name: conjur-follower
spec:
  port:
    targetPort: https
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: conjur-follower
  wildcardPolicy: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conjur-follower
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conjur-follower
  template:
    metadata:
      labels:
        app: conjur-follower
        name: conjur-follower
        role: conjur-follower
    spec:
      serviceAccountName: follower
      hostAliases:
      - ip: "CONJUR_IP"
        hostnames:
        - "conjur-master.LAB_DOMAIN"
      containers:
      - name: conjur-appliance
        image: default-route-openshift-image-registry.apps-crc.testing/conjur/conjur-appliance
        command: ["/tmp/seedfile/start-follower.sh"]
        securityContext:
          privileged: true
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 443
          name: https
        readinessProbe:
          httpGet:
            path: /health
            port: 443
            scheme: HTTPS
          initialDelaySeconds: 15
          timeoutSeconds: 5
        volumeMounts:
          - name: seedfile
            mountPath: /tmp/seedfile
            readOnly: true
      volumes:
      - name: seedfile
        emptyDir:
          medium: Memory
      - name: conjur-token
        emptyDir:
          medium: Memory
      - name: jwt-token
        projected:
          sources:
          - serviceAccountToken:
              audience: cybrdemo
              path: jwt
              expirationSeconds: 6000
